--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk:
-  - openjdk8
+  - openjdk11
   
-sudo: false
-script: mvn clean verify
+install: false
+  
+script:
+  - ./mvnw clean test -Dspring.profiles.active=test
