--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: java
 jdk:
-  - openjdk8
+  - openjdk11
+ 
   
-sudo: false
-script: mvn clean verify
+script:
+  - mvn clean test -Dspring.profiles.active=test
